welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:17: error: Boolean does not take parameters
	return vuBiscuit()
                        ^