welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = 
{
	var vuBiscuit=false
	for (n <- 1 to 6)
	{
		avance()
		if (estSurBiscuit())
		{
			vuBiscuit==true
		}
	}
	for (n <- 1 to 6)
	{
		recule()
	}
	return vuBiscuit()
}
